--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,19 @@
+body {
+  margin: 0;
+  font-family: 'Inder';
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent;
+}
+
 .wrapper {
   display: flex;
   height: 100vh;
   flex-direction: column;
-}
-
-.content {
-  width: 100%;
-  height: 100%;
-  /* padding: 1rem; */
 }
 
 .navbar {
@@ -19,7 +25,7 @@
   background-color: #05182B;
 }
 
-.il-navbar {
+.navbar .il-navbar {
   max-height: 1.5rem;
   color: #AFABAB;
   padding-top: 0.3125rem;
@@ -31,36 +37,60 @@
   font-weight: 600;
 }
 
-.navbar-icon {
+.navbar .navbar-icon {
   height: 25px;
   width: 27px;
   display: block;
 }
 
-.home {
+.content {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
 }
 
-.page-art {
-  background-image: url('./images/vxb5lk0zxra71.png');
+.content .column {
   width: 50%;
+}
+
+.home-image {
+  background-image: url('./images/vxb5lk0zxra71.png');
   background-position: center;
   background-size: cover;
 }
 
-.form-link-span {
+.background-grey {
+  background-color: #AFABAB;
+}
+
+.form-box {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.form-box .form-content {
+  margin: auto auto 1rem auto;
+  height: fit-content;
+  width: 80%;
+  background: #D9D9D9;
+  box-shadow: 2px 4px 4px 2px rgb(0 0 0 / 25%);
+  border-radius: 2rem;
+}
+
+.form-box .form-link-span {
   color: #0d2f4b;
   cursor: pointer;
 }
 
-.form-text {
+.form-box .form-text {
   display: table;
-  margin: 1rem 1rem 0 auto;
-  color: #5d5e60
+  margin: 1rem 4rem auto auto;
+  color: #5d5e60;
 }
 
-.form-title {
+.form-box .form-title {
   font-style: normal;
   font-weight: 400;
   font-size: 1.5rem;
@@ -70,27 +100,63 @@
   display: table;
 }
 
-.register-content {
-  display: grid;
-  align-content: center;
-  background-color: #AFABAB;
-  width: 50%;
-  padding: 10% 5% 10% 5%;
-}
-
-.register-form {
-  padding: 10% 5% 10% 5%;
-  display: block;
-  min-height: 50%;
-  background: #D9D9D9;
-  box-shadow: 2px 4px 4px 2px rgb(0 0 0 / 25%);
-  border-radius: 2rem;
-  height: fit-content;
-}
-
-form {
+.form-box form {
   display: flex;
   flex-flow: column;
+}
+
+.form-box input {
+  padding: 0 1rem;
+  box-sizing: border-box;
+  background: rgba(255, 255, 255, 0.51);
+  border: 1px solid #6E6F76;
+  border-radius: 10px;
+  height: 2rem;
+  margin: 1rem;
+}
+
+/* Add a right margin to each icon */
+.fa {
+  margin: auto 8px auto -12px;
+}
+
+[required]::-webkit-input-placeholder {
+  /* WebKit browsers */
+  color: #ce0707;
+}
+
+[required]::-moz-placeholder {
+  /* WebKit browsers */
+  color: #ce0707;
+}
+
+[required]::-ms-input-placeholder {
+  /* WebKit browsers */
+  color: #ce0707;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
+}
+
+.form-box input:focus {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border: 1px solid #212529;
+}
+
+.form-box button {
+  margin: 1rem;
+  padding: 0.5rem 1rem;
+  background: #0D2F4B;
+  height: fit-content;
+  font-style: normal;
+  font-size: 1.5rem;
+  line-height: 2.375rem;
+  display: flex;
+  align-items: flex-end;
+  border: none;
+  color: #D9D9D9;
 }
 
 .notification {
@@ -116,69 +182,6 @@ form {
   background-color: #51a351;
 }
 
-input {
-  padding: 0 1rem;
-  box-sizing: border-box;
-  background: rgba(255, 255, 255, 0.51);
-  border: 1px solid #6E6F76;
-  border-radius: 10px;
-  height: 2rem;
-  margin: 1rem;
-}
-
-/* Add a right margin to each icon */
-.fa {
-  margin-left: -12px;
-  margin-right: 8px;
-}
-
-[required]::-webkit-input-placeholder {
-  /* WebKit browsers */
-  color: #ce0707;
-}
-
-[required]::-moz-placeholder {
-  /* WebKit browsers */
-  color: #ce0707;
-}
-
-[required]::-ms-input-placeholder {
-  /* WebKit browsers */
-  color: #ce0707;
-}
-
-textarea:focus,
-input:focus {
-  outline: none;
-}
-
-input:focus {
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  border: 1px solid #212529;
-}
-
-button {
-  margin: 1rem;
-  padding: 0.5rem 1rem;
-  background: #0D2F4B;
-  height: fit-content;
-  font-style: normal;
-  font-size: 1.5rem;
-  line-height: 2.375rem;
-  display: flex;
-  align-items: flex-end;
-  border: none;
-  color: #D9D9D9;
-}
-
-body {
-  margin: 0;
-  font-family: 'Inder';
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: transparent;
+.padding-1 {
+  padding: 1rem;
 }
