--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,7 +61,7 @@ body {
 }
 
 .background-grey {
-  background-color: #AFABAB;
+  background-color: #e8e8e8;
 }
 
 .form-box {
@@ -105,7 +105,7 @@ body {
   flex-flow: column;
 }
 
-.form-box input {
+input {
   padding: 0 1rem;
   box-sizing: border-box;
   background: rgba(255, 255, 255, 0.51);
@@ -113,6 +113,18 @@ body {
   border-radius: 10px;
   height: 2rem;
   margin: 1rem;
+}
+
+select { 
+  padding: 0 1rem;
+  box-sizing: border-box;
+  background: rgba(255, 255, 255, 0.51);
+  border: 1px solid #6E6F76;
+  border-radius: 10px;
+  height: 2rem;
+  margin: 1rem;
+  max-width: fit-content;
+  min-width: 45%;
 }
 
 /* Add a right margin to each icon */
@@ -140,12 +152,13 @@ input:focus {
   outline: none;
 }
 
-.form-box input:focus {
+input:focus {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border: 1px solid #212529;
 }
 
-.form-box button {
+button {
+  border-radius: 0.7rem;
   margin: 1rem;
   padding: 0.5rem 1rem;
   background: #0D2F4B;
@@ -157,6 +170,7 @@ input:focus {
   align-items: flex-end;
   border: none;
   color: #D9D9D9;
+  cursor: pointer;
 }
 
 .notification {
